@@ -18,6 +18,7 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
@@ -28,6 +29,7 @@ import static org.mockito.Mockito.when;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 
@@ -52,9 +54,6 @@ import org.eclipse.swt.widgets.Tree;
 import org.eclipse.ui.PlatformUI;
 import org.junit.Before;
 import org.junit.Test;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 public class ConnectorMigrationWizardTest {
 	public class TestConnectorMigrationWizard extends ConnectorMigrationWizard {
@@ -94,7 +93,7 @@ public class ConnectorMigrationWizardTest {
 	public void setUp() {
 		doNothing().when(migrationUi).warnOfValidationFailure(any(List.class));
 		doNothing().when(migrationUi).notifyMigrationComplete();
-		createMigrator(ImmutableMap.of("mock", "mock.new"));
+		createMigrator(Map.of("mock", "mock.new"));
 	}
 
 	@Test
@@ -139,12 +138,12 @@ public class ConnectorMigrationWizardTest {
 	@Test
 	public void performFinishAfterConnectorsSelected()
 			throws InvocationTargetException, InterruptedException, IOException {
-		createMigrator(ImmutableMap.of("foo", "foo.new", "bar", "bar.new", "baz", "baz.new"));
+		createMigrator(Map.of("foo", "foo.new", "bar", "bar.new", "baz", "baz.new"));
 		IWizardContainer container = createWizard(new TestConnectorMigrationWizard(migrator));
 		spinEventLoop();
 		wizard.performFinish();
 		verify(container).run(eq(true), eq(true), any(IRunnableWithProgress.class));
-		verify(migrator).setConnectorsToMigrate(eq(ImmutableList.of("foo", "bar")));
+		verify(migrator).setConnectorsToMigrate(eq(List.of("foo", "bar")));
 		verify(migrator).migrateConnectors(any(IProgressMonitor.class));
 	}
 
@@ -162,11 +161,11 @@ public class ConnectorMigrationWizardTest {
 	@Test
 	public void performFinishNoConnectorsSelectedByDefault()
 			throws InvocationTargetException, InterruptedException, IOException {
-		createMigrator(ImmutableMap.of("foo", "foo.new", "bar", "bar.new", "baz", "baz.new"));
+		createMigrator(Map.of("foo", "foo.new", "bar", "bar.new", "baz", "baz.new"));
 		IWizardContainer container = createWizard(new ConnectorMigrationWizard(migrator));
 		wizard.performFinish();
 		verify(container).run(eq(true), eq(true), any(IRunnableWithProgress.class));
-		verify(migrator).setConnectorsToMigrate(eq(ImmutableList.<String> of()));
+		verify(migrator).setConnectorsToMigrate(eq(List.<String> of()));
 		verify(migrator).migrateConnectors(any(IProgressMonitor.class));
 	}
 
@@ -182,12 +181,13 @@ public class ConnectorMigrationWizardTest {
 		manager.addRepository(new TaskRepository("mock", "http://mock"));
 		manager.addRepository(new TaskRepository("bar", "http://bar"));
 
-		createMigrator(ImmutableMap.of("foo", "foo.new", "bar", "bar.new", "mock", "mock.new"), manager);
+		createMigrator(Map.of("foo", "foo.new", "bar", "bar.new", "mock", "mock.new"), manager);
 
 		IWizardContainer container = createWizard(new ConnectorMigrationWizard(migrator));
 		wizard.performFinish();
 		verify(container).run(eq(true), eq(true), any(IRunnableWithProgress.class));
-		verify(migrator).setConnectorsToMigrate(eq(ImmutableList.of("bar", "mock")));
+		verify(migrator).setConnectorsToMigrate(
+				argThat(list -> new HashSet<>(List.of("bar", "mock")).equals(new HashSet<>(list))));
 		verify(migrator).migrateConnectors(any(IProgressMonitor.class));
 	}
 
@@ -222,9 +222,9 @@ public class ConnectorMigrationWizardTest {
 	@Test
 	public void createConnectorList() throws Exception {
 		CheckboxTreeViewer viewer = new ConnectorMigrationWizard(migrator).createConnectorList(WorkbenchUtil.getShell(),
-				ImmutableList.of("mock"));
+				List.of("mock"));
 		IRepositoryManager manager = migrator.getRepositoryManager();
-		assertEquals(ImmutableList.of("mock"), viewer.getInput());
+		assertEquals(List.of("mock"), viewer.getInput());
 		assertTrue(viewer.getLabelProvider() instanceof LabelProvider);
 		assertEquals("mock", ((LabelProvider) viewer.getLabelProvider()).getText("mock"));
 
