@@ -1,10 +1,10 @@
 /*******************************************************************************
  * Copyright (c) 2015 Tasktop Technologies and others.
- * 
+ *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
  * https://www.eclipse.org/legal/epl-2.0
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -20,6 +20,7 @@ import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.eclipse.mylyn.internal.tasks.ui.BrandManager;
 import org.eclipse.mylyn.internal.tasks.ui.ConnectorBrand;
@@ -27,13 +28,11 @@ import org.eclipse.mylyn.internal.tasks.ui.wizards.SelectRepositoryConnectorPage
 import org.eclipse.mylyn.tasks.tests.connector.MockRepositoryConnector;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
-
 public class ConnectorBrandContentProviderTest {
 
 	@Test
 	public void testGetElementsNoConnectors() {
-		Collection<MockRepositoryConnector> connectors = ImmutableList.of();
+		Collection<MockRepositoryConnector> connectors = List.of();
 		BrandManager brandManager = mock(BrandManager.class);
 		ConnectorBrandContentProvider provider = new ConnectorBrandContentProvider(brandManager, connectors);
 
@@ -49,17 +48,16 @@ public class ConnectorBrandContentProviderTest {
 		MockRepositoryConnector c1 = mockConnector("c1");
 		MockRepositoryConnector c2 = mockConnector("c2");
 		MockRepositoryConnector c3 = mockConnector("c3");
-		Collection<MockRepositoryConnector> connectors = ImmutableList.of(c1, c2, notUserManaged, cantCreateRepository,
-				c3);
+		Collection<MockRepositoryConnector> connectors = List.of(c1, c2, notUserManaged, cantCreateRepository, c3);
 		BrandManager brandManager = mock(BrandManager.class);
 		ConnectorBrandContentProvider provider = new ConnectorBrandContentProvider(brandManager, connectors);
 
 		assertBrands(provider, new ConnectorBrand(c1, null), new ConnectorBrand(c2, null),
 				new ConnectorBrand(c3, null));
 
-		when(brandManager.getBrands(c1.getConnectorKind())).thenReturn(ImmutableList.of("a", "b", "c"));
-		when(brandManager.getBrands(c2.getConnectorKind())).thenReturn(ImmutableList.<String> of());
-		when(brandManager.getBrands(c3.getConnectorKind())).thenReturn(ImmutableList.of("d"));
+		when(brandManager.getBrands(c1.getConnectorKind())).thenReturn(List.of("a", "b", "c"));
+		when(brandManager.getBrands(c2.getConnectorKind())).thenReturn(List.<String> of());
+		when(brandManager.getBrands(c3.getConnectorKind())).thenReturn(List.of("d"));
 		assertBrands(provider, new ConnectorBrand(c1, null), new ConnectorBrand(c1, "a"), new ConnectorBrand(c1, "b"),
 				new ConnectorBrand(c1, "c"), new ConnectorBrand(c2, null), new ConnectorBrand(c3, null),
 				new ConnectorBrand(c3, "d"));
